Fix the overflowing of grid from container.

--- a/styles.css
+++ b/styles.css
@@ -1,26 +1,23 @@
 body{
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
+  align-items: center;
 }
-
 .container{
   display: flex;
-  border:5px solid #ff0000;
-  width:450px;
-  height:402px;
-  
+  border: 5px solid red;
+  width: 400px;
+  height:400px;
 }
-
 .row{
   display: flex;
   flex-direction: column;
-  flex: 1;
-  }
+  width:100%;  
+  
+}
 
 .column{
-  padding:10px;
-  border:1px solid black;
-  flex:1;
+  border: 1px solid black;
+  flex: 1;
 }
